syntax = "proto3";
package remote;

service Remote {

	rpc RegisterReceiver(RegisterReceiverRequest) returns (RegisterResponse);

	rpc RegisterContent(RegisterContentRequest) returns (RegisterResponse);

	rpc GetContent(EmptyRequest) returns (stream GetContentReponse);

	rpc GetReceivers(EmptyRequest) returns (stream GetReceiversResponse);

	rpc ChooseReceiver(ChooseReceiverRequest) returns (stream ChooseReceiverResponse);

	rpc Send(stream TransferContent) returns (EmptyResponse);

	rpc Receive(ReceiveRequest) returns (stream TransferContent);
}

message EmptyRequest {
}

message EmptyResponse {
}

message RegisterReceiverRequest {
	string alias = 1;
}

message RegisterResponse {
	string id = 1;
}

enum Type {
	FILE = 0;
	MESSAGE = 1;
}

message RegisterContentRequest {
	Type content_type = 1;

	// sender alias
	string alias = 2;

	optional int64 size = 3;

	optional string name = 4;
}

message GetContentReponse {
	Type content_type = 1;

	// sender alias
	string alias = 2;

	string ip = 3;

	optional int64 size = 4;

	optional string name = 5;
}

message GetReceiversResponse {
	message Receiver {
		string alias = 1;
		string ip = 2;
	}

	repeated Receiver receivers = 1;
}

message ChooseReceiverRequest {
	// receiver id
	string id = 1;
}

message ChooseReceiverResponse {
	// content id
	string id = 1;
}

message TransferContent {
	bytes data = 1;
	repeated int64 range = 2;
}

message ReceiveRequest {
	string id = 1;
}

